@@ -233,6 +233,8 @@ ModCallbacks.MC_PRE_GET_RANDOM_ROOM_INDEX = 1290
 
 ModCallbacks.MC_POST_GLOWING_HOURGLASS_SAVE = 1300
 ModCallbacks.MC_POST_GLOWING_HOURGLASS_LOAD = 1301
+ModCallbacks.MC_PRE_GLOWING_HOURGLASS_SAVE = 1302
+ModCallbacks.MC_PRE_GLOWING_HOURGLASS_LOAD = 1303
 
 ModCallbacks.MC_PRE_RENDER_CUSTOM_CHARACTER_MENU = 1333
 ModCallbacks.MC_PRE_PICKUP_GET_LOOT_LIST = 1334
